<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OCR PDAM Meter</string>
    <string name="splash_screen">v 1.1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_full_screen">PDAM Meter OCR</string>
    <string name="splash_screen_content_desc">splash image</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="btn_capture">Capture</string>
    <string name="ocr_label">result : </string>
    <string name="btn_done">Done</string>
    <string name="btn_history">History</string>
    <string name="btn_about">Info</string>
    <string name="btn_capture_meter">Capture Meter</string>
    <string name="title_activity_meter_data">Capture Meter</string>
    <string name="lbl_meter_no">No. Pelanggan</string>
    <string name="btn_qrcode">Scan QRCode</string>
    <string name="lbl_meter_no_hint">Meter Number</string>
    <string name="lbl_meter_result">Indeks Meter</string>
    <string name="lbl_meter_result_hint">Meter Result</string>
    <string name="btn_scan_meter">Start Scan</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_history">Scan History</string>
    <string name="hello_world">Hello world!</string>
    <string name="ic_delete">Delete</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_version">Version 1.1</string>
    <string name="about_copyright">\u00A9 2015 - Fadli Rizki</string>
    <string name="lbl_pelanggan">No. Pelanggan :  </string>
    <string name="lbl_index_meter">Indeks meter :  </string>
    <string name="ic_sync">Sync to server</string>

</resources>
